# LightRecorder

./: CMakeLists.txt  README.md  server_test.py  vcpkg.json
app/: auth_client.cpp  auth_client.h  config.json  main.cpp
core/: core.cpp  core.h
core/audio/: audio_buffers.h  wasapi_capture.cpp  wasapi_capture.h
core/capture/: gdi_capture.cpp  gdi_capture.h  hook_present.cpp  hook_present.h
core/encode/: delta_tiles.cpp  delta_tiles.h  mjpeg.cpp  mjpeg.h
core/io/: avi_mux.cpp  avi_mux.h  packets.h  writer.cpp  writer.h
core/util/: arena_alloc.h  spsc_ring.h  timing.h
docs/: dev-notes.md
server/: api.yaml  app.py  models.py  server_data.json
server/docker/: Dockerfile  compose.yml
tasks/: tasks.yaml
